[gd_scene load_steps=16 format=3 uid="uid://3xmrfdc65b8n"]

[ext_resource type="Script" path="res://Scripts/Shroom_dude.gd" id="1_1ipyu"]
[ext_resource type="Texture2D" uid="uid://byac73g6btwnj" path="res://Images/Shroom Dudes/Shroom Dude.png" id="1_3n5ef"]
[ext_resource type="Texture2D" uid="uid://ow74hjbn25i0" path="res://Images/Shroom Dudes/Gun.png" id="2_15gnd"]
[ext_resource type="Script" path="res://Scripts/Gun.gd" id="3_iyhxp"]
[ext_resource type="AudioStream" uid="uid://dkhsv6hafiq7k" path="res://Audio/EnemyHit.ogg" id="5_7qtma"]
[ext_resource type="AudioStream" uid="uid://6ekv64tyrh2i" path="res://Audio/EnemyShoot.ogg" id="5_lc0bi"]

[sub_resource type="Animation" id="Animation_uqwv7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_4p5h8"]
resource_name = "Shoot"
length = 1.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.55),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-1.333, -1.333), Vector2(-1.64, -1.4), Vector2(-1.2, -1.2), Vector2(-1.333, -1.333)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ShroomShoot/ShroomShoot:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lnvur"]
_data = {
"RESET": SubResource("Animation_uqwv7"),
"Shoot": SubResource("Animation_4p5h8")
}

[sub_resource type="Animation" id="Animation_ug0rj"]
resource_name = "Bob"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 3), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GunSprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-3, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ts8w5"]
_data = {
"Bob": SubResource("Animation_ug0rj")
}

[sub_resource type="Animation" id="Animation_wpded"]
resource_name = "Damage"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.698039, 0, 0.160784, 1), Color(0.698039, 0, 0.160784, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DamageShroom/Damaged:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a368y"]
_data = {
"Damage": SubResource("Animation_wpded")
}

[sub_resource type="Animation" id="Animation_oncp8"]
resource_name = "Dissolve"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bjtcc"]
_data = {
"Dissolve": SubResource("Animation_oncp8")
}

[node name="Shroom Dude" type="Node2D"]
z_index = 1
script = ExtResource("1_1ipyu")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.75, 0.75)
texture = ExtResource("1_3n5ef")
hframes = 2

[node name="GunSprite" type="Sprite2D" parent="Sprite2D"]
position = Vector2(12, 13.3333)
scale = Vector2(-1.333, -1.333)
texture = ExtResource("2_15gnd")
hframes = 11
script = ExtResource("3_iyhxp")

[node name="ShroomShoot" type="AnimationPlayer" parent="Sprite2D/GunSprite"]
libraries = {
"": SubResource("AnimationLibrary_lnvur")
}

[node name="ShroomShoot" type="AudioStreamPlayer" parent="Sprite2D/GunSprite/ShroomShoot"]
stream = ExtResource("5_lc0bi")

[node name="ShootDelay" type="Timer" parent="Sprite2D/GunSprite"]
wait_time = 2.25

[node name="ConstantSpriteBob" type="AnimationPlayer" parent="Sprite2D"]
autoplay = "Bob"
libraries = {
"": SubResource("AnimationLibrary_ts8w5")
}

[node name="DamageShroom" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_a368y")
}

[node name="Damaged" type="AudioStreamPlayer" parent="Sprite2D/DamageShroom"]
stream = ExtResource("5_7qtma")

[node name="Hurtbox" type="Area2D" parent="."]
position = Vector2(0, 5)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Hurtbox"]
polygon = PackedVector2Array(11, 20, -11, 20, -11, 0, -21, -6, -16, -16, -1, -24, 3, -24, 17, -15, 21, -6, 11, 0)

[node name="TrackPlayerAfterDeath" type="Timer" parent="."]
wait_time = 1.51
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Dissolve"
libraries = {
"": SubResource("AnimationLibrary_bjtcc")
}

[connection signal="timeout" from="Sprite2D/GunSprite/ShootDelay" to="." method="_on_shoot_delay_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="timeout" from="TrackPlayerAfterDeath" to="." method="_on_track_player_after_death_timeout"]
